feat: option managed

--- a/translations/forms.fr.yaml
+++ b/translations/forms.fr.yaml
@@ -12,5 +12,5 @@ Surface: Surface
 Description: Description
 Gaz: Gaz
 Electrique: Electrique
-maxPrice: Budget max
-minSurface: Surface minimale
+Budget max: Budget Max
+Surface minimale: Surface minimale
